@@ -1,6 +1,7 @@
 47
 ================
 
+04/08/23 Default stock unit price during give of vacc/test #441
 04/08/23 CSV import option to override animal entry date to today
 03/08/23 New Move->Adopt option to generate and request signed paperwork #1231
 03/08/23 Adoption contracts via checkout should use new link to animal/person
